Cree el html y css de mi cuenta y crear cuenta

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Mi Cuenta</a>
+                    <a class="nav-link" href="./pages/mi-cuenta.html">Mi Cuenta</a>
                   </li>
                   <li class="nav-item">
                     <a id="boton-carro" class="nav-link" href="pages/carrito.html"></a>
