--- a/pages/mi-cuenta.html
+++ b/pages/mi-cuenta.html
@@ -45,42 +45,20 @@
                 </div>
             </nav>
         </header>
-        <main>
-            <h1 class="h1-pregs">Preguntas Frecuentes</h1>
-            <div class="todas-pregs">
-                <div class="div-pregs">
-                    <h2 class="h2-pregs">¿Qué son los suplementos deportivos y cómo pueden beneficiar mi rendimiento físico?</h2>
-                    <p class="p-pregs">Los suplementos deportivos son productos diseñados para complementar la dieta y mejorar el rendimiento físico. Pueden proporcionar nutrientes adicionales, aumentar la energía, acelerar la recuperación muscular y mejorar la resistencia.</p>
+        <main class="mi-cuenta">
+            <form class="login">
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Ingrese Su Email</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
-                <div class="div-pregs">
-                    <h2 class="h2-pregs">¿Cuál es la diferencia entre proteína y creatina, y cuándo debería tomar cada uno de ellos?</h2>
-                    <p class="p-pregs"> Las proteínas son fundamentales para el crecimiento y la reparación muscular, la creatina mejora la fuerza y el rendimiento. Puedes tomar proteínas después del entrenamiento, creatina antes o después del entrenamiento.</p>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label"> Ingrese Su Contraseña</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1">
+                  <div id="emailHelp" class="form-text"><a href="#">¿Olvidaste tu contraseña?</a></div>
                 </div>
-                <div class="div-pregs">
-                    <h2 class="h2-pregs">¿Existen suplementos deportivos adecuados para diferentes tipos de deportes o actividades físicas?</h2>
-                    <p class="p-pregs">Sí, hay suplementos específicos para diferentes deportes o actividades físicas. Por ejemplo, los suplementos pre-entrenamiento pueden ser útiles para actividades de alta intensidad, mientras que los suplementos de recuperación pueden ser beneficiosos después de entrenamientos intensos o prolongados.</p>
-                </div>
-                <div class="div-pregs">
-                    <h2 class="h2-pregs">¿Cómo debo tomar los suplementos deportivos para obtener los mejores resultados?</h2>
-                    <p class="p-pregs"> La dosificación y el momento de tomar los suplementos pueden variar según el producto. Es recomendable seguir las instrucciones del fabricante y, si tienes dudas, consultar con un profesional de la salud o un nutricionista deportivo.</p>
-                </div>
-                <div class="div-pregs">
-                    <h2 class="h2-pregs">¿Los suplementos deportivos tienen efectos secundarios? ¿Cuáles son y cómo puedo evitarlos?</h2>
-                    <p class="p-pregs">Algunos suplementos pueden tener efectos secundarios, aunque suelen ser leves. Los más comunes incluyen malestar estomacal, insomnio y cambios en la presión arterial. Para evitarlos, es importante seguir las dosis recomendadas y consultar con un profesional antes de comenzar cualquier suplementación.</p>
-                </div>
-                <div class="div-pregs">
-                    <h2 class="h2-pregs">¿Cuánto tiempo tomará ver resultados con el uso de suplementos deportivos?</h2>
-                    <p class="p-pregs">Los resultados pueden variar según el individuo y el tipo de suplemento. En general, se recomienda utilizar los suplementos de manera consistente y acompañarlos de una dieta equilibrada y un entrenamiento adecuado. Los resultados suelen notarse en semanas o meses, dependiendo de cada caso.</p>
-                </div>
-                <div class="div-pregs">
-                    <h2 class="h2-pregs">¿Es seguro combinar diferentes suplementos deportivos o tomarlos junto con medicamentos?</h2>
-                    <p class="p-pregs"> No se recomienda combinar varios suplementos sin antes consultar con un profesional de la salud. Algunas combinaciones pueden ser seguras y efectivas, pero otras pueden tener interacciones no deseadas. Además, es importante informar a tu médico sobre cualquier suplemento que estés tomando si estás bajo medicación.</p>
-                </div>
-                <div class="div-pregs">
-                    <h2 class="h2-pregs">¿Cuáles son los ingredientes más comunes en los suplementos deportivos y cuáles son sus beneficios?</h2>
-                    <p class="p-pregs">Los ingredientes comunes en los suplementos deportivos incluyen proteínas, aminoácidos, creatina, vitaminas,</p>
-                </div>
-            </div>
+                <button type="submit" class="boton-login">Entrar</button>
+                <div id="emailHelp" class="form-textt"><a href="crear-cuenta.html">¿No tenés cuenta? Crear una</a></div>
+              </form>
         </main>
         <footer>
             <h3 class="redes">Redes Sociales</h3>
