--- a/pages/proteinas.html
+++ b/pages/proteinas.html
@@ -34,7 +34,7 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Mi Cuenta</a>
+                        <a class="nav-link" href="mi-cuenta.html">Mi Cuenta</a>
                       </li>
                       <li class="nav-item">
                         <a id="boton-carro" class="nav-link" href="carrito.html"></a>
