Termine los scripst de el funcionamiento de cuentas y logins (seguir testeando en busca de fallos)

--- a/pages/proteinas.html
+++ b/pages/proteinas.html
@@ -33,7 +33,7 @@
                           <li><a class="dropdown-item" href="shakers.html">Shakers</a></li>
                         </ul>
                       </li>
-                      <li class="nav-item">
+                      <li class="nav-item" id="nick-cuenta">
                         <a class="nav-link" href="mi-cuenta.html">Mi Cuenta</a>
                       </li>
                       <li class="nav-item">
@@ -77,4 +77,5 @@
     <script src="../scripts/informacion.js"></script>
     <script src="../scripts/cargar-productos.js"></script>
     <script src="../scripts/proteinas.js"></script>
+    <script src="../scripts/mostrar-usuario.js"></script>
 </html>
