--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                       <li><a class="dropdown-item" href="./pages/shakers.html">Shakers</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item" id="nick-cuenta">
                     <a class="nav-link" href="./pages/mi-cuenta.html">Mi Cuenta</a>
                   </li>
                   <li class="nav-item">
