--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -33,7 +33,7 @@
                           <li><a class="dropdown-item" href="shakers.html">Shakers</a></li>
                         </ul>
                       </li>
-                      <li class="nav-item">
+                      <li class="nav-item" id="nick-cuenta">
                         <a class="nav-link" href="mi-cuenta.html">Mi Cuenta</a>
                       </li>
                       <li class="nav-item">
@@ -70,4 +70,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
     <script src="../scripts/carrito.js"></script>
+    <script src="../scripts/mostrar-usuario.js"></script>
 </html>
