--- a/pages/crear-cuenta.html
+++ b/pages/crear-cuenta.html
@@ -34,7 +34,7 @@
                           <li><a class="dropdown-item" href="shakers.html">Shakers</a></li>
                         </ul>
                       </li>
-                      <li class="nav-item">
+                      <li class="nav-item" id="nick-cuenta">
                         <a class="nav-link" href="mi-cuenta.html">Mi Cuenta</a>
                       </li>
                       <li class="nav-item">
@@ -102,5 +102,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
     <script src="../scripts/pregs.js"></script>
     <script src="../scripts/crear-cuenta.js"></script>
+    <script src="../scripts/mostrar-usuario.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </html>
