--- a/pages/mi-cuenta.html
+++ b/pages/mi-cuenta.html
@@ -34,7 +34,7 @@
                           <li><a class="dropdown-item" href="shakers.html">Shakers</a></li>
                         </ul>
                       </li>
-                      <li class="nav-item">
+                      <li class="nav-item" id="nick-cuenta">
                         <a class="nav-link" href="mi-cuenta.html">Mi Cuenta</a>
                       </li>
                       <li class="nav-item">
