--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -45,47 +45,8 @@
                 </div>
             </nav>
         </header>
-        <main>
-          <div class="lengueta">
-            <h2>Registro</h2>
-        </div>
-            <form class="row g-3" id="form-crear">
-                <div class="col-md-6">
-                  <label for="inputEmail4" class="form-label">Ingresa tu dirección de correo</label>
-                  <input type="email" class="form-control" id="crear-email">
-                  <label for="inputEmail4" class="form-label">Ingresa un nombre de usuario</label>
-                  <input type="text" class="form-control" id="crear-usuario">
-                </div>
-                <div class="col-md-6">
-                  <label for="inputPassword4" class="form-label">Ingresa una contraseña</label>
-                  <input type="password" class="form-control" id="crear-contraseña">
-                  <label for="inputPassword4" class="form-label">Confirmar contraseña</label>
-                  <input type="password" class="form-control" id="validar-contraseña">
-                </div>
-                <div class="col-6">
-                  <label for="inputAddress" class="form-label">Direccion</label>
-                  <input type="text" class="form-control" id="crear-direccion">
-                </div>
-                <div class="col-6">
-                  <label for="inputAddress2" class="form-label">Código postal</label>
-                  <input type="text" class="form-control" id="crear-codigo-postal" placeholder="">
-                </div>
-                <div class="col-md-6">
-                  <label for="inputCity" class="form-label">Número de telfono</label>
-                  <input type="text" class="form-control" id="crear-numero-cel">
-                </div>
-                <div class="col-md-6">
-                  <label for="inputCity" class="form-label">País</label>
-                  <input type="text" class="form-control" id="crear-pais">
-                </div>
-                <div class="col-md-12">
-                  <label for="inputCity" class="form-label">Escribe Una Descripción Para tu Perfil!</label>
-                  <input type="text" class="form-control" id="crear-descripcion">
-                </div>
-                <div class="col-6">
-                  <button type="button" class="crear" id="boton-crear-cuenta">Crear cuenta</button>
-                </div>
-              </form>
+        <main id="todo-perfil">
+          
         </main>
         <footer>
             <h3 class="redes">Redes Sociales</h3>
@@ -109,7 +70,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
     <script src="../scripts/pregs.js"></script>
-    <script src="../scripts/crear-cuenta.js"></script>
     <script src="../scripts/mostrar-usuario.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="../scripts/perfil.js"></script>
 </html>
