--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -44,7 +44,7 @@
                 </div>
             </nav>
         </header>
-        <main id="xxxx">
+        <main>
           <table id="tabla" class="table">
   
           </table>
