--- a/pages/crear-cuenta.html
+++ b/pages/crear-cuenta.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="shortcut icon" href="../assets/Dumbbell.png">
-        <title>Suplex-LP | Proteina Whey SD NUTRITION</title>
+        <title>Suplex-LP | Crear Cuenta</title>
     </head>
     <body>
         <header>
@@ -47,8 +47,8 @@
         </header>
         <main>
           <div class="lengueta">
-            <h2>Registro</h2>
-        </div>
+            <h2>Crear una cuenta</h2>
+          </div>
             <form class="row g-3" id="form-crear">
                 <div class="col-md-6">
                   <label for="inputEmail4" class="form-label">Ingresa tu dirección de correo</label>
