--- a/pages/mi-cuenta.html
+++ b/pages/mi-cuenta.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="shortcut icon" href="../assets/Dumbbell.png">
-        <title>Suplex-LP | Proteina Whey SD NUTRITION</title>
+        <title>Suplex-LP | Iniciar Sesión</title>
     </head>
     <body>
         <header>
@@ -45,20 +45,25 @@
                 </div>
             </nav>
         </header>
-        <main class="mi-cuenta">
+        <main class="mi-sesion">
+          <div class="lengueta">
+            <h2>Iniciar Sesión</h2>
+          </div>
+          <div class="mi-cuenta">
             <form class="login">
-                <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Ingrese Su Email</label>
-                  <input type="email" class="form-control" id="email-login" aria-describedby="emailHelp">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label"> Ingrese Su Contraseña</label>
-                  <input type="password" class="form-control" id="contra-login">
-                  <div id="emailHelp" class="form-text"><a href="#">¿Olvidaste tu contraseña?</a></div>
-                </div>
-                <button type="button" class="boton-login" id="login">Entrar</button>
-                <div id="emailHelp" class="form-textt"><a href="crear-cuenta.html">¿No tenés cuenta? Crear una</a></div>
-              </form>
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Ingrese Su Email</label>
+                <input type="email" class="form-control" id="email-login" aria-describedby="emailHelp">
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label"> Ingrese Su Contraseña</label>
+                <input type="password" class="form-control" id="contra-login">
+                <div id="emailHelp" class="form-text"><a href="#">¿Olvidaste tu contraseña?</a></div>
+              </div>
+              <button type="button" class="boton-login" id="login">Entrar</button>
+              <div id="emailHelp" class="form-textt"><a href="crear-cuenta.html">¿No tenés cuenta? Crear una</a></div>
+            </form>
+          </div>   
         </main>
         <footer>
             <h3 class="redes">Redes Sociales</h3>
