--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="shortcut icon" href="../assets/Dumbbell.png">
-        <title>Suplex-LP | Proteina Whey SD NUTRITION</title>
+        <title>Suplex-LP | Perfil</title>
     </head>
     <body>
         <header>
@@ -46,6 +46,9 @@
             </nav>
         </header>
         <main id="todo-perfil">
+          <div class="lengueta">
+            <h2>Perfil</h2>
+          </div>
           
         </main>
         <footer>
