mejore a input tipo number para el codigo postal y el cel

--- a/pages/crear-cuenta.html
+++ b/pages/crear-cuenta.html
@@ -68,11 +68,11 @@
                 </div>
                 <div class="col-6">
                   <label for="inputAddress2" class="form-label">Código postal</label>
-                  <input type="text" class="form-control" id="crear-codigo-postal" placeholder="">
+                  <input type="number" class="form-control" id="crear-codigo-postal" placeholder="">
                 </div>
                 <div class="col-md-6">
                   <label for="inputCity" class="form-label">Número de telfono</label>
-                  <input type="text" class="form-control" id="crear-numero-cel">
+                  <input type="number" class="form-control" id="crear-numero-cel">
                 </div>
                 <div class="col-md-6">
                   <label for="inputCity" class="form-label">País</label>
