--- a/pages/mi-cuenta.html
+++ b/pages/mi-cuenta.html
@@ -52,11 +52,11 @@
           <div class="mi-cuenta">
             <form class="login">
               <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Ingrese Su Email</label>
+                <label for="email-login" class="form-label">Ingrese Su Email</label>
                 <input type="email" class="form-control" id="email-login" aria-describedby="emailHelp">
               </div>
               <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label"> Ingrese Su Contraseña</label>
+                <label for="contra-login" class="form-label"> Ingrese Su Contraseña</label>
                 <input type="password" class="form-control" id="contra-login">
                 <div id="emailHelp" class="form-text"><a href="#">¿Olvidaste tu contraseña?</a></div>
               </div>
@@ -86,7 +86,6 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
-    <script src="../scripts/pregs.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../scripts/login.js"></script>
 </html>
