Idente todos los html

--- a/pages/crear-cuenta.html
+++ b/pages/crear-cuenta.html
@@ -12,93 +12,91 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="../index.html"><img src="../assets/Logo.png" alt=""></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Productos
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="proteinas.html">Proteinas</a></li>
-                          <li><a class="dropdown-item" href="creatinas.html">Creatinas</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="shakers.html">Shakers</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item" id="nick-cuenta">
-                        <a class="nav-link" href="mi-cuenta.html">Mi Cuenta</a>
-                      </li>
-                      <li class="nav-item">
-                        <a id="boton-carro" class="nav-link" href="carrito.html"></a>
-                      </li>
+          <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="../index.html"><img src="../assets/Logo.png" alt=""></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="proteinas.html">Proteinas</a></li>
+                      <li><a class="dropdown-item" href="creatinas.html">Creatinas</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="shakers.html">Shakers</a></li>
                     </ul>
-                  </div>
-                </div>
-            </nav>
+                  </li>
+                  <li class="nav-item" id="nick-cuenta">
+                    <a class="nav-link" href="mi-cuenta.html">Mi Cuenta</a>
+                  </li>
+                  <li class="nav-item">
+                    <a id="boton-carro" class="nav-link" href="carrito.html"></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
         </header>
         <main>
           <div class="lengueta">
             <h2>Crear una cuenta</h2>
           </div>
-            <form class="row g-3" id="form-crear">
-                <div class="col-md-6">
-                  <label for="crear-email" class="form-label">Ingresa tu dirección de correo</label>
-                  <input type="email" class="form-control" id="crear-email">
-                  <label for="crear-usuario" class="form-label">Ingresa un nombre de usuario</label>
-                  <input type="text" class="form-control" id="crear-usuario">
-                </div>
-                <div class="col-md-6">
-                  <label for="crear-contraseña" class="form-label">Ingresa una contraseña</label>
-                  <input type="password" class="form-control" id="crear-contraseña">
-                  <label for="validar-contraseña" class="form-label">Confirmar contraseña</label>
-                  <input type="password" class="form-control" id="validar-contraseña">
-                </div>
-                <div class="col-6">
-                  <label for="crear-direccion" class="form-label">Direccion</label>
-                  <input type="text" class="form-control" id="crear-direccion">
-                </div>
-                <div class="col-6">
-                  <label for="crear-codigo-postal" class="form-label">Código postal</label>
-                  <input type="number" class="form-control" id="crear-codigo-postal">
-                </div>
-                <div class="col-md-6">
-                  <label for="crear-numero-cel" class="form-label">Número de telfono</label>
-                  <input type="number" class="form-control" id="crear-numero-cel">
-                </div>
-                <div class="col-md-6">
-                  <label for="crear-pais" class="form-label">País</label>
-                  <input type="text" class="form-control" id="crear-pais">
-                </div>
-                <div class="col-12">
-                  <button type="button" class="crear" id="boton-crear-cuenta">Crear cuenta</button>
-                </div>
-              </form>
-        </main>
+          <form class="row g-3" id="form-crear">
+            <div class="col-md-6">
+              <label for="crear-email" class="form-label">Ingresa tu dirección de correo</label>
+              <input type="email" class="form-control" id="crear-email">
+              <label for="crear-usuario" class="form-label">Ingresa un nombre de usuario</label>
+              <input type="text" class="form-control" id="crear-usuario">
+            </div>
+            <div class="col-md-6">
+              <label for="crear-contraseña" class="form-label">Ingresa una contraseña</label>
+              <input type="password" class="form-control" id="crear-contraseña">
+              <label for="validar-contraseña" class="form-label">Confirmar contraseña</label>
+              <input type="password" class="form-control" id="validar-contraseña">
+            </div>
+            <div class="col-6">
+              <label for="crear-direccion" class="form-label">Direccion</label>
+              <input type="text" class="form-control" id="crear-direccion">
+            </div>
+            <div class="col-6">
+              <label for="crear-codigo-postal" class="form-label">Código postal</label>
+              <input type="number" class="form-control" id="crear-codigo-postal">
+            </div>
+            <div class="col-md-6">
+              <label for="crear-numero-cel" class="form-label">Número de telfono</label>
+              <input type="number" class="form-control" id="crear-numero-cel">
+            </div>
+            <div class="col-md-6">
+              <label for="crear-pais" class="form-label">País</label>
+              <input type="text" class="form-control" id="crear-pais">
+            </div>
+            <div class="col-12">
+              <button type="button" class="crear" id="boton-crear-cuenta">Crear cuenta</button>
+            </div>
+          </form>
+        </main>  
         <footer>
-            <h3 class="redes">Redes Sociales</h3>
-            <a href="#" target="_blank"><img class="ig" src="../assets/Instagram.png" alt="ig"></a>
-            <a href="#" target="_blank"><img class="whats" src="../assets/WhatsApp.png" alt="WhatsApp"></a>
-            <h3 class="contactanos">Contáctanos Ante Cualquier Problema</h3>
-            <div class="adress">
-                <a class="dire" href="#" target="_blank"><h3 class="dire">2118 Thornridge Cir. Syracuse, Connecticut 35624</h3></a>
-            </div>
-            <div class="mail" >
-                <h3>suplex@gmail.com</h3>
-            </div>
-            <div class="medios-d-p">
-                <h3 class="medios-h3">Medios de pago</h3>
-                <img class="tarjetas" src="../assets/tarjetas.png" alt="tarjetas">
-            </div>
-            <a href="https://github.com/NahuelOK" target="_blank"><h3 class="creador">Diseño y desarrollo por Nahuel Moreno</h3></a>
+          <h3 class="redes">Redes Sociales</h3>
+          <a href="#" target="_blank"><img class="ig" src="../assets/Instagram.png" alt="ig"></a>
+          <a href="#" target="_blank"><img class="whats" src="../assets/WhatsApp.png" alt="WhatsApp"></a>
+          <h3 class="contactanos">Contáctanos Ante Cualquier Problema</h3>
+          <div class="adress">
+            <a class="dire" href="#" target="_blank"><h3 class="dire">2118 Thornridge Cir. Syracuse, Connecticut 35624</h3></a>
+          </div>
+          <div class="mail" >
+            <h3>suplex@gmail.com</h3>
+          </div>
+          <div class="medios-d-p">
+            <h3 class="medios-h3">Medios de pago</h3>
+            <img class="tarjetas" src="../assets/tarjetas.png" alt="tarjetas">
+          </div>
+          <a href="https://github.com/NahuelOK" target="_blank"><h3 class="creador">Diseño y desarrollo por Nahuel Moreno</h3></a>
         </footer>
     </body>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
