--- a/pages/shakers.html
+++ b/pages/shakers.html
@@ -11,65 +11,63 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="../index.html"><img src="../assets/Logo.png" alt=""></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Productos
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="proteinas.html">Proteinas</a></li>
-                          <li><a class="dropdown-item" href="creatinas.html">Creatinas</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="shakers.html">Shakers</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item" id="nick-cuenta">
-                        <a class="nav-link" href="mi-cuenta.html">Mi Cuenta</a>
-                      </li>
-                      <li class="nav-item">
-                        <a id="boton-carro" class="nav-link" href="carrito.html"></a>
-                      </li>
+          <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="../index.html"><img src="../assets/Logo.png" alt=""></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="proteinas.html">Proteinas</a></li>
+                      <li><a class="dropdown-item" href="creatinas.html">Creatinas</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="shakers.html">Shakers</a></li>
                     </ul>
-                  </div>
-                </div>
-            </nav>
+                  </li>
+                  <li class="nav-item" id="nick-cuenta">
+                    <a class="nav-link" href="mi-cuenta.html">Mi Cuenta</a>
+                  </li>
+                  <li class="nav-item">
+                    <a id="boton-carro" class="nav-link" href="carrito.html"></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
         </header>
         <main>
-            <div class="lengueta">
-                <h2>Shakers</h2>
-            </div>
-            <div class="cont-tira">
-                <div id="tira1" class="tira1">
+          <div class="lengueta">
+            <h2>Shakers</h2>
+          </div>
+          <div class="cont-tira">
+            <div id="tira1" class="tira1">
 
-                </div>
             </div>
+          </div>
         </main>
         <footer>
-            <h3 class="redes">Redes Sociales</h3>
-            <a href="#" target="_blank"><img class="ig" src="../assets/Instagram.png" alt="ig"></a>
-            <a href="#" target="_blank"><img class="whats" src="../assets/WhatsApp.png" alt="WhatsApp"></a>
-            <h3 class="contactanos">Contáctanos Ante Cualquier Problema</h3>
-            <div class="adress">
-                <a class="dire" href="#" target="_blank"><h3 class="dire">2118 Thornridge Cir. Syracuse, Connecticut 35624</h3></a>
-            </div>
-            <div class="mail" >
-                <h3>suplex@gmail.com</h3>
-            </div>
-            <div class="medios-d-p">
-                <h3 class="medios-h3">Medios de pago</h3>
-                <img class="tarjetas" src="../assets/tarjetas.png" alt="tarjetas">
-            </div>
-            <a href="https://github.com/NahuelOK" target="_blank"><h3 class="creador">Diseño y desarrollo por Nahuel Moreno</h3></a>
+          <h3 class="redes">Redes Sociales</h3>
+          <a href="#" target="_blank"><img class="ig" src="../assets/Instagram.png" alt="ig"></a>
+          <a href="#" target="_blank"><img class="whats" src="../assets/WhatsApp.png" alt="WhatsApp"></a>
+          <h3 class="contactanos">Contáctanos Ante Cualquier Problema</h3>
+          <div class="adress">
+            <a class="dire" href="#" target="_blank"><h3 class="dire">2118 Thornridge Cir. Syracuse, Connecticut 35624</h3></a>
+          </div>
+          <div class="mail" >
+            <h3>suplex@gmail.com</h3>
+          </div>
+          <div class="medios-d-p">
+            <h3 class="medios-h3">Medios de pago</h3>
+            <img class="tarjetas" src="../assets/tarjetas.png" alt="tarjetas">
+          </div>
+          <a href="https://github.com/NahuelOK" target="_blank"><h3 class="creador">Diseño y desarrollo por Nahuel Moreno</h3></a>
         </footer>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
